# NinjaClawBot

./: .gitignore  AGENTS.md  DevelopmentGuide.md  DevelopmentLog.md  EnhancementPlan.md  InstallationGuide.md  IntallationGuide.md  README.md  conftest.py  developmentPlan.md  pyproject.toml
.agents/skills/ninjaclawbot-implementation/: SKILL.md
.agents/skills/ninjaclawbot-implementation/agents/: openai.yaml
.agents/skills/pi-validation/: SKILL.md
.agents/skills/project-documentation/: SKILL.md
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion.md
backup/: DevelopmentLog.md  EnhancementPlan.md  README.md
integrations/openclaw/ninjaclawbot-plugin/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
integrations/openclaw/ninjaclawbot-plugin/skills/ninjaclawbot_control/: SKILL.md
integrations/openclaw/ninjaclawbot-plugin/src/: index.ts  runner.ts  schemas.ts
integrations/openclaw/ninjaclawbot-plugin/tests/: index.test.ts  runner.test.ts
ninjaclawbot/: README.md  pyproject.toml
ninjaclawbot/ninjaclawbot_data/expressions/: happy.json
ninjaclawbot/ninjaclawbot_data/movements/: wave.json
ninjaclawbot/src/ninjaclawbot/: __init__.py  __main__.py  actions.py  adapters.py  assets.py  config.py  errors.py  executor.py  locks.py  presence.py  results.py  runtime.py
ninjaclawbot/src/ninjaclawbot/cli/: __init__.py  common.py  expression_tool.py  movement_tool.py
ninjaclawbot/src/ninjaclawbot/expressions/: __init__.py  catalog.py  faces.py  player.py  policy.py  sounds.py
ninjaclawbot/src/ninjaclawbot/openclaw/: __init__.py  bridge.py  service.py
ninjaclawbot/tests/: test_actions.py  test_adapters.py  test_assets.py  test_cli_tools.py  test_dependency_imports.py  test_executor.py  test_expressions.py  test_openclaw_bridge.py  test_policy.py  test_repo_hygiene.py  test_results.py  test_runtime.py
pi5buzzer/: LICENSE  README.md  pyproject.toml
pi5buzzer/src/pi5buzzer/: __init__.py  __main__.py  driver.py  notes.py
pi5buzzer/src/pi5buzzer/cli/: buzzer_tool.py
pi5buzzer/src/pi5buzzer/config/: config_manager.py
pi5buzzer/src/pi5buzzer/core/: driver.py  music.py
pi5buzzer/tests/: conftest.py  test_config.py  test_driver.py  test_music.py
pi5disp/: README.md  display.json  pyproject.toml
pi5disp/src/pi5disp/: __init__.py  __main__.py
pi5disp/src/pi5disp/cli/: __init__.py  _common.py  demo_cmd.py  display_tool.py  image_cmd.py  info_cmd.py  init_cmd.py  text_cmd.py
pi5disp/src/pi5disp/config/: __init__.py  config_manager.py
pi5disp/src/pi5disp/core/: __init__.py  driver.py  renderer.py
pi5disp/src/pi5disp/effects/: __init__.py  text_ticker.py
pi5disp/tests/: conftest.py  test_cli.py  test_config.py  test_display_tool.py  test_driver.py  test_renderer.py  test_smoke.py  test_text_ticker.py
pi5servo/: LICENSE  README.md  pyproject.toml
pi5servo/src/pi5servo/: __init__.py  __main__.py  driver.py
pi5servo/src/pi5servo/cli/: __init__.py  _common.py  calib.py  cmd.py  config_cmd.py  move.py  servo_tool.py  status.py
pi5servo/src/pi5servo/config/: __init__.py  config_manager.py
pi5servo/src/pi5servo/core/: __init__.py  backend.py  backend_errors.py  endpoint.py  multi_servos.py  servo.py
pi5servo/src/pi5servo/core/backends/: __init__.py  dfr0566.py  hardware_pwm.py  pca9685.py  pwm_pio.py
pi5servo/src/pi5servo/motion/: __init__.py  calculator.py  easing.py
pi5servo/src/pi5servo/parser/: __init__.py  command.py
pi5servo/tests/: __init__.py  conftest.py  test_backend.py  test_cli.py  test_config.py  test_core.py  test_motion.py  test_parser.py  test_servo_tool.py
pi5vl53l0x/: README.md  pyproject.toml
pi5vl53l0x/src/pi5vl53l0x/: __init__.py  __main__.py  driver.py  registers.py
pi5vl53l0x/src/pi5vl53l0x/cli/: sensor_tool.py
pi5vl53l0x/src/pi5vl53l0x/config/: config_manager.py
pi5vl53l0x/src/pi5vl53l0x/core/: i2c.py  sensor.py
pi5vl53l0x/tests/: test_cli.py  test_config.py  test_i2c.py  test_sensor.py
src/ninjaclawbot_workspace/: __init__.py
workspace_tests/: test_workspace.py
