[project]
name = "ninjaclawbot-workspace"
version = "0.1.0"
description = "Root workspace installer for NinjaClawBot and its Raspberry Pi 5 driver libraries."
authors = [
    {name = "Nil Creator", email = "nilcreator@gmail.com"},
]
dependencies = [
    "ninjaclawbot",
    "pi5buzzer[pi]",
    "pi5servo[pi]",
    "pi5disp[pi]",
    "pi5vl53l0x[pi]",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.uv.sources]
ninjaclawbot = { path = "./ninjaclawbot", editable = true }
pi5buzzer = { path = "./pi5buzzer", editable = true }
pi5servo = { path = "./pi5servo", editable = true }
pi5disp = { path = "./pi5disp", editable = true }
pi5vl53l0x = { path = "./pi5vl53l0x", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ninjaclawbot_workspace"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E501"]
exclude = [
    "NinjaRobotV5_bak",
    ".venv",
    "ninjaclawbot/.venv",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
    "ninjaclawbot/src",
    "pi5buzzer/src",
    "pi5servo/src",
    "pi5disp/src",
    "pi5vl53l0x/src",
    "src",
]
testpaths = [
    "workspace_tests",
]
