[project]
name = "ninjaclawbot"
version = "0.1.0"
description = "Integrated robot control layer for NinjaClawBot on Raspberry Pi 5."
authors = [
    {name = "Nil Creator", email = "nilcreator@gmail.com"},
]
dependencies = [
    "click>=8.1",
    "pi5buzzer[pi]",
    "pi5servo[pi]",
    "pi5disp[pi]",
    "pi5vl53l0x[pi]",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.uv.sources]
pi5buzzer = { path = "../pi5buzzer", editable = true }
pi5servo = { path = "../pi5servo", editable = true }
pi5disp = { path = "../pi5disp", editable = true }
pi5vl53l0x = { path = "../pi5vl53l0x", editable = true }

[project.scripts]
ninjaclawbot = "ninjaclawbot.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
