[project]
name = "pi5buzzer"
version = "0.1.0"
description = "A non-blocking passive buzzer driver for Raspberry Pi 5 with musical note support."
authors = [
    {name = "Nil Creator", email = "nilcreator@gmail.com"},
]
dependencies = [
    "click>=8.1",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"

[project.optional-dependencies]
pi = [
    "rpi-lgpio>=0.6; platform_system == 'Linux'",
]
ninjarobot = [
    "ninja_utils",
]
dev = [
    "pytest>=7.0",
    "ruff",
]

[project.scripts]
pi5buzzer = "pi5buzzer.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
